# widget-grid

./: .gitignore  AUTHORS  README.md  meson.build
lib/: AbstractData.vala  AbstractItemFactory.vala  Interfaces.vala  ItemInterface.vala  LayoutHandler.vala  ModelInterface  ModelInterface.vala  SelectionFrame.vala  SelectionFrameRectangle.vala  SimpleModel.vala  SimpleSortedListModel.vala  View.vala  WidgetGrid.vala
lib/Interfaces/: Item.vala  Model.vala  PositionHandler.vala  SelectionFrame.vala  SelectionHandler.vala
libwidgetgrid/: LayoutHandler.vala  SimpleModel.vala  View.vala  meson.build
libwidgetgrid/Interfaces/: CursorHandler.vala  Item.vala  Model.vala  PositionHandler.vala  SelectionHandler.vala
src/: AppMenu.vala  Demo.vala  DemoItem.vala  DemoItemData.vala  DemoItemFactory.vala  FilePropertiesGrid.vala  IconGridItem.vala  IconGridItemFactory.vala  PropertiesGrid.vala  PropertiesLabels.vala  PropertiesWidgets.vala  SimpleSortedListModel.vala  ViewPropertiesGrid.vala
